--- a/i18n/ru/strings.xml
+++ b/i18n/ru/strings.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-	<string name="loading">Загрузка...</string>
+	<string name="loading">Составляем рецепты...</string>
 	<string name="search">Поиск</string>
 	
-	<string name="no_object_in_bd">Этот объект еще не добавлен в базу данных</string>
-	<string name="list_empty">Список пуст</string>
+	<string name="all_recipes">Все рецепты</string>
+	
+	<string name="no_object_in_bd">Упс! Описание и рецепт этого объекта где-то затерялись...</string>
+	<string name="list_empty">Список пуст... Совсем пуст.</string>
+	<string name="search_empty">Эмм... У нас нет ингредиентов или рецептов, которые Вы хотите найти. Попробуйте ввести другую ключевую фразу для поиска.</string>
 </resources>
 
