--- a/i18n/ru/strings.xml
+++ b/i18n/ru/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-	<string name="ldng">Составляем рецепты...</string>
+	<string name="loading1">Составляем рецепты...</string>
 	<string name="loading2">Ищем компоненты...</string>
 	<string name="search">Поиск</string>
 	
